{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 9,
  "lineage": "505e44c7-726e-50e0-ebff-7007c4e7a5a8",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "cert_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "cert-manager",
            "metadata": [
              {
                "generation": 0,
                "name": "cert-manager",
                "resource_version": "972",
                "uid": "01ee95f9-6692-4b09-876e-8ded76694a3d"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.aws_eks_cluster.my_cluster",
            "data.aws_eks_cluster_auth.my_cluster",
            "data.aws_iam_group.admins",
            "module.iam.aws_iam_role.eks_cluster_role",
            "module.iam.aws_iam_role.eks_node_role",
            "module.iam.aws_iam_role_policy_attachment.ec2_container_registry_read_only",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_policy",
            "module.iam.aws_iam_role_policy_attachment.eks_cni_policy",
            "module.iam.aws_iam_role_policy_attachment.eks_service_policy",
            "module.iam.aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.kubernetes.aws_eks_access_entry.devops_access",
            "module.kubernetes.aws_eks_access_policy_association.devops",
            "module.kubernetes.aws_eks_cluster.eks_cluster",
            "module.kubernetes.aws_eks_node_group.eks_node_group",
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.private_sg",
            "module.network.aws_security_group.public_sg",
            "module.network.aws_security_group_rule.private_sg_rules",
            "module.network.aws_security_group_rule.public_sg_rules",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "ingress_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx",
            "metadata": [
              {
                "generation": 0,
                "name": "ingress-nginx",
                "resource_version": "971",
                "uid": "1098a187-4cf5-4fcc-9249-bcc7761fe204"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.aws_eks_cluster.my_cluster",
            "data.aws_eks_cluster_auth.my_cluster",
            "data.aws_iam_group.admins",
            "module.iam.aws_iam_role.eks_cluster_role",
            "module.iam.aws_iam_role.eks_node_role",
            "module.iam.aws_iam_role_policy_attachment.ec2_container_registry_read_only",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_policy",
            "module.iam.aws_iam_role_policy_attachment.eks_cni_policy",
            "module.iam.aws_iam_role_policy_attachment.eks_service_policy",
            "module.iam.aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.kubernetes.aws_eks_access_entry.devops_access",
            "module.kubernetes.aws_eks_access_policy_association.devops",
            "module.kubernetes.aws_eks_cluster.eks_cluster",
            "module.kubernetes.aws_eks_node_group.eks_node_group",
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.private_sg",
            "module.network.aws_security_group.public_sg",
            "module.network.aws_security_group_rule.private_sg_rules",
            "module.network.aws_security_group_rule.public_sg_rules",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05cb8bcdceea47873",
            "arn": "arn:aws:ec2:us-east-1:226731664760:elastic-ip/eipalloc-05cb8bcdceea47873",
            "association_id": "eipassoc-01589659de471238f",
            "domain": "vpc",
            "id": "eipalloc-05cb8bcdceea47873",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fa5b7ae4c0750d9b",
            "private_dns": "ip-10-0-1-175.ec2.internal",
            "private_ip": "10.0.1.175",
            "public_dns": "ec2-100-28-109-124.compute-1.amazonaws.com",
            "public_ip": "100.28.109.124",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "med-nat-eip-0-default"
            },
            "tags_all": {
              "Name": "med-nat-eip-0-default"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08496ea8a3b3d7c25",
            "arn": "arn:aws:ec2:us-east-1:226731664760:elastic-ip/eipalloc-08496ea8a3b3d7c25",
            "association_id": "eipassoc-03f88e9a76db479cf",
            "domain": "vpc",
            "id": "eipalloc-08496ea8a3b3d7c25",
            "network_border_group": "us-east-1",
            "network_interface": "eni-031d799dc23fd9537",
            "private_dns": "ip-10-0-2-44.ec2.internal",
            "private_ip": "10.0.2.44",
            "public_dns": "ec2-52-207-118-120.compute-1.amazonaws.com",
            "public_ip": "52.207.118.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "med-nat-eip-1-default"
            },
            "tags_all": {
              "Name": "med-nat-eip-1-default"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226731664760:internet-gateway/igw-0b7c69cae12b06fc1",
            "id": "igw-0b7c69cae12b06fc1",
            "owner_id": "226731664760",
            "tags": {
              "Name": "med-igw-default"
            },
            "tags_all": {
              "Name": "med-igw-default"
            },
            "vpc_id": "vpc-08dd6caae49471466"
          },
          "dependencies": [
            "module.network.aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05cb8bcdceea47873",
            "association_id": "eipassoc-01589659de471238f",
            "connectivity_type": "public",
            "id": "nat-037ece09fdcc4e3bd",
            "network_interface_id": "eni-0fa5b7ae4c0750d9b",
            "private_ip": "10.0.1.175",
            "public_ip": "100.28.109.124",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00f43d4baed7bd8e6",
            "tags": {
              "Name": "med-nat-gateway-0-default"
            },
            "tags_all": {
              "Name": "med-nat-gateway-0-default"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08496ea8a3b3d7c25",
            "association_id": "eipassoc-03f88e9a76db479cf",
            "connectivity_type": "public",
            "id": "nat-073e5d304c38bb198",
            "network_interface_id": "eni-031d799dc23fd9537",
            "private_ip": "10.0.2.44",
            "public_ip": "52.207.118.120",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ce26f76c7d79e960",
            "tags": {
              "Name": "med-nat-gateway-1-default"
            },
            "tags_all": {
              "Name": "med-nat-gateway-1-default"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226731664760:route-table/rtb-0540ee22f6e20b147",
            "id": "rtb-0540ee22f6e20b147",
            "owner_id": "226731664760",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-037ece09fdcc4e3bd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-0-default"
            },
            "tags_all": {
              "Name": "private-rt-0-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-08dd6caae49471466"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226731664760:route-table/rtb-095ef053bd64265ee",
            "id": "rtb-095ef053bd64265ee",
            "owner_id": "226731664760",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-073e5d304c38bb198",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-1-default"
            },
            "tags_all": {
              "Name": "private-rt-1-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-08dd6caae49471466"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226731664760:route-table/rtb-061700adacf4a6b94",
            "id": "rtb-061700adacf4a6b94",
            "owner_id": "226731664760",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7c69cae12b06fc1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-default"
            },
            "tags_all": {
              "Name": "public-rt-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-08dd6caae49471466"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e3e79cb85b133cb",
            "route_table_id": "rtb-0540ee22f6e20b147",
            "subnet_id": "subnet-05d5842a30c57e1cf"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07918b1634c15ea7e",
            "route_table_id": "rtb-095ef053bd64265ee",
            "subnet_id": "subnet-0cb467fe83daec4ad"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d72e781cd6b6c5e6",
            "route_table_id": "rtb-061700adacf4a6b94",
            "subnet_id": "subnet-00f43d4baed7bd8e6"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05763c698ff48d8f4",
            "route_table_id": "rtb-061700adacf4a6b94",
            "subnet_id": "subnet-0ce26f76c7d79e960"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226731664760:security-group/sg-0fa48b430c9f6cd27",
            "description": "Allow private access",
            "egress": [],
            "id": "sg-0fa48b430c9f6cd27",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-05493bf00a7a71c92"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "226731664760",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08dd6caae49471466"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226731664760:security-group/sg-05493bf00a7a71c92",
            "description": "Allow HTTP and SSH",
            "egress": [],
            "id": "sg-05493bf00a7a71c92",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 230,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-0fa48b430c9f6cd27"
                ],
                "self": false,
                "to_port": 230
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "226731664760",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08dd6caae49471466"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_sg_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "3",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24"
            ],
            "description": null,
            "from_port": 6379,
            "id": "sgrule-2562957693",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fa48b430c9f6cd27",
            "security_group_rule_id": "sgr-04cafb8b9a55b8d6a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.private_sg",
            "module.network.aws_security_group.public_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main2"
          ]
        },
        {
          "index_key": "4",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 379,
            "id": "sgrule-946420741",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0fa48b430c9f6cd27",
            "security_group_rule_id": "sgr-063b59464e52e7b13",
            "self": false,
            "source_security_group_id": "sg-05493bf00a7a71c92",
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.private_sg",
            "module.network.aws_security_group.public_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_sg_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2051167810",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05493bf00a7a71c92",
            "security_group_rule_id": "sgr-0ce5f82673a99109e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.private_sg",
            "module.network.aws_security_group.public_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main2"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3865362934",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05493bf00a7a71c92",
            "security_group_rule_id": "sgr-0d7a394d6190afeb7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.private_sg",
            "module.network.aws_security_group.public_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main2"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 230,
            "id": "sgrule-2699856534",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-05493bf00a7a71c92",
            "security_group_rule_id": "sgr-005414b2897834809",
            "self": false,
            "source_security_group_id": "sg-0fa48b430c9f6cd27",
            "timeouts": null,
            "to_port": 230,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.private_sg",
            "module.network.aws_security_group.public_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226731664760:subnet/subnet-05d5842a30c57e1cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d5842a30c57e1cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "226731664760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1-default"
            },
            "tags_all": {
              "Name": "private-subnet-1-default"
            },
            "vpc_id": "vpc-08dd6caae49471466"
          },
          "dependencies": [
            "module.network.aws_vpc.main2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226731664760:subnet/subnet-0cb467fe83daec4ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb467fe83daec4ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "226731664760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2-default"
            },
            "tags_all": {
              "Name": "private-subnet-2-default"
            },
            "vpc_id": "vpc-08dd6caae49471466"
          },
          "dependencies": [
            "module.network.aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226731664760:subnet/subnet-00f43d4baed7bd8e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f43d4baed7bd8e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "226731664760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1-default"
            },
            "tags_all": {
              "Name": "public-subnet-1-default"
            },
            "vpc_id": "vpc-08dd6caae49471466"
          },
          "dependencies": [
            "module.network.aws_vpc.main2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226731664760:subnet/subnet-0ce26f76c7d79e960",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce26f76c7d79e960",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "226731664760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2-default"
            },
            "tags_all": {
              "Name": "public-subnet-2-default"
            },
            "vpc_id": "vpc-08dd6caae49471466"
          },
          "dependencies": [
            "module.network.aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226731664760:vpc/vpc-08dd6caae49471466",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-001ab7f367d865e1b",
            "default_route_table_id": "rtb-0f5b7c2b54a1343a6",
            "default_security_group_id": "sg-0ca2bcb4ea10ae0e3",
            "dhcp_options_id": "dopt-07f8fbc7f225b66a5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08dd6caae49471466",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5b7c2b54a1343a6",
            "owner_id": "226731664760",
            "tags": {
              "Name": "med_vpc-default"
            },
            "tags_all": {
              "Name": "med_vpc-default"
            }
          }
        }
      ]
    }
  ]
}